force-app/main/default/objects/Fund_Transfer_Received__c/Fund_Transfer_Received__c.object-meta.xml
<CustomObject>
    <label>Fund Transfer Received</label>
    <nameField>
        <displayFormat>PINV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Transfers Received</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>