force-app/main/default/objects/Fund_Transfer_Received__c/fields/Fund_Transfer_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Fund_Transfer_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Transfer Schedule</label>
    <referenceTo>Fund_Transfer_Schedule__c</referenceTo>
    <relationshipLabel>Fund Transfers Received</relationshipLabel>
    <relationshipName>Fund_Transfers_Received</relationshipName>
    <type>Lookup</type>
</CustomField>