force-app/main/default/objects/Fund_Transfer_Received__c/fields/Received_Currency__c.field-meta.xml
<CustomField>
    <fullName>Received_Currency__c</fullName>
    <formula>TEXT(Fund_Transfer_Schedule__r.Exchange_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Currency</label>
    <type>Text</type>
</CustomField>