force-app/main/default/objects/Fund_Transfer_Received__c/fields/Received_Exchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Exchange_Amount__c</fullName>
    <formula>Fund_Transfer_Schedule__r.Exchange_Rate_to_GBP__c  *  Received_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Exchange Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>